resources/views/v2/components/HeaderLight/HeaderLight.css
@import "variables";

.HeaderLight {
    padding-top: $padding-md;
    padding-bottom: $padding-md;
    padding-bottom: $padding-xs ?if $mobile;
    position: relative;
}

    .HeaderLight__content {
        margin-top: $margin-xl;
        margin-left: $margin-xl;
        margin-left: 0 ?if $tablet;
    }

    .HeaderLight__meta {
        margin-top: $margin-md;
    }

    .HeaderLight__meta2 {
        margin-top: $margin-md;
    }

    .HeaderLight__title {
        color: $gray-dark;
        font: $font-heading-xxl;
        font: $font-heading-xl ?if $mobile;
    }

